k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: college-website-service

spec:
  type: NodePort

  selector:
    app: college-website

  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 30007
